--- a/app/src/main/res/layout/acerca_de.xml
+++ b/app/src/main/res/layout/acerca_de.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".AcercaDelProgramador"
     android:layout_margin="16dp">
 
@@ -13,10 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:text="Desarrollador/a:"
+        android:text="Datos del Desarrollador/a:"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
@@ -39,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="408dp"
+        android:textColor="@color/black"
         android:text="Version:"
         android:textAlignment="center"
         android:textSize="25sp"
@@ -52,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="332dp"
+        android:textColor="@color/black"
         android:text="RG19-I04-001"
         android:textAlignment="center"
         android:textSize="25sp"
@@ -65,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="188dp"
+        android:textColor="@color/black"
         android:text="Gilma Noemi Ramos Garcia"
         android:textAlignment="center"
         android:textSize="25sp"
@@ -78,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="280dp"
+        android:textColor="@color/black"
         android:text="Codigo:"
         android:textAlignment="center"
         android:textSize="25sp"
